--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,16 @@
+.DS_Store
+/build_local/
+/source/assets/build/
+/cache/
 /node_modules/
-*/.DS_Store
+/vendor/
+/.idea/
+/.vscode/
+package-lock.json
+yarn.lock
+npm-debug.log
+yarn-error.log
+
+# Optional ignores
+# /build_staging/
+# /build_production/
